judger/judger_cpp/tmp/b720358f-c74b-4153-8769-8cb9c75ee17dtxt
c:\Users\haohan\Desktop\myoj\judger\judger_cpp\tmp\22f05d98-131f-4592-9b9b-ece2e191f0da.cpp:1:1: error: 'ff' does not name a type
 ff
 ^
